# Security-Expert

./: .dockerignore  .gcloudignore  Dockerfile  README.md  api.py  app.py  logs.json  pyproject.toml  requirements.txt  script.py  security_analysis.db  security_memory.db
src/security_expert/: crew.py  main.py
src/security_expert/config/: agents.yaml  tasks.yaml
