[project]
name = "security_expert"
version = "0.1.0"
description = "security-expert using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
security_expert = "security_expert.main:run"
run_crew = "security_expert.main:run"
train = "security_expert.main:train"
replay = "security_expert.main:replay"
test = "security_expert.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
